# cloud-solutions

./: .commitlintrc.json  .editorconfig  .gitignore  .prettierignore  .release-please-manifest.json  CODEOWNERS  CONTRIBUTING.md  README.md  prettier.config.js  release-please-config.json
projects/ai/gen-media/ads-agent/release1/marketing_agent/: README.md  pyproject.toml
projects/ai/gen-media/ads-agent/release1/marketing_agent/marketing_agent/: __init__.py  agent.py  campaign_utils.py  config.py  prompt.md  (+3 more)
projects/ai/gen-media/ads-agent/release2/adk_common/: pyproject.toml
projects/ai/gen-media/experimental/movieLenz-main/: .env.example  .gitignore  CODEOWNERS  README.md  evaluate_media.py  llm_interaction_vertex.py  main.py  metrics.py  metrics_factory.py  prompt_optimizer.py  prompt_optimizer_main.py  prompts.py  pyproject.toml  requirements.txt  runner.py  utils.py  video_reader.py
projects/ai/gen-media/experimental/movieLenz-main/tests/: __init__.py  test_runner.py
projects/ai/gen-media/experimental/movieLenz-main/uvq_pytorch/: README.md  inference.py  pyproject.toml  requirements.txt
projects/database-archival/: AUTHORS  README.md  buildtest.dockerfile  pyproject.toml  requirements.txt  setup.py
projects/database-archival/demo/: sample_config.json
projects/database-archival/docs/: .pages  architecture.md  best_practices.md  deployment.md  faqs.md  index.md
projects/database-archival/src/database_archival/common/: config.py
projects/database-archival/src/database_archival/common/models/: database.py
projects/database-archival/src/database_archival/common/utils/: __init__.py  bigquery_utils.py  bigquery_utils_test.py  config_validator.py  config_validator_test.py  secret_manager.py  secret_manager_test.py
projects/database-archival/src/database_archival/dag/: config.py  dag_archive_and_prune.py  dag_archive_and_prune_test.py  dag_setup.py
projects/database-archival/src/database_archival/dag/models/: config_model.py  config_model_test.py
projects/database-archival/src/database_archival/dag/tasks/: data_archiving.py  data_archiving_test.py  data_pruning.py  data_pruning_preparation.py  data_pruning_preparation_test.py  data_pruning_test.py  table_workflow.py  table_workflow_test.py
projects/database-archival/src/database_archival/dag/testing/: base_test.py
projects/database-archival/src/database_archival/dag/utils/: config_parser.py  config_parser_test.py  task_namer.py  task_namer_test.py
projects/database-archival/src/database_archival/pruning_function/: main.py  main_test.py  requirements.in  requirements.txt
projects/database-archival/src/database_archival/pruning_function/models/: config_model.py  config_model_test.py
projects/database-archival/src/database_archival/pruning_function/utils/: database_connector.py  database_connector_test.py
projects/database-archival/src/database_archival/pruning_function/workflow/: bigquery.py  bigquery_test.py  config_parser.py  config_parser_test.py  database.py  database_test.py
projects/database-archival/terraform/: main.tf  variables.tf
projects/database-archival/tools/config_validator/: config_validator.py  config_validator_test.py
projects/database-archival/tools/config_validator/testdata/: bad_config.json  bad_format.json.txt  good_config.json
projects/database-archival/tools/data_generator/: data_generator.py
projects/fsi-quant-assistant/adk-agent/: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild-clear-agents.yaml  cloudbuild-deploy.yaml  cloudbuild.yaml  config.tftpl  download_model.py  main.py  pyproject.toml
projects/fsi-quant-assistant/adk-agent/financial_analyst/: .agent.env  .agent_engine_config.json  .gitignore  __init__.py  agent.py  gcp_utils.py  prompt.py
projects/fsi-quant-assistant/adk-agent/financial_analyst/sub_agents/data_analyst/: __init__.py  agent.py  prompt.py
projects/fsi-quant-assistant/adk-agent/financial_analyst/sub_agents/execution_analyst/: __init__.py
projects/fsi-quant-assistant/adk-agent/financial_analyst/sub_agents/forecasting_agent/: __init__.py  agent.py  forecasting_tool.py  prompt.py
projects/fsi-quant-assistant/adk-agent/financial_analyst/sub_agents/news_analyst/: __init__.py  agent.py  prompt.py
projects/fsi-quant-assistant/adk-agent/financial_analyst/sub_agents/order_agent/: __init__.py  agent.py  prompt.py
projects/fsi-quant-assistant/adk-agent/financial_analyst/sub_agents/risk_analyst/: __init__.py
projects/fsi-quant-assistant/adk-agent/financial_analyst/sub_agents/sentiment_analyst/: __init__.py  agent.py  prompt.py
projects/fsi-quant-assistant/adk-agent/financial_analyst/sub_agents/trading_analyst/: __init__.py
projects/fsi-quant-assistant/adk-agent/financial_analyst/sub_agents/watchlist_agent/: __init__.py  agent.py  prompt.py
projects/fsi-quant-assistant/adk-agent/scripts/: clean_up_old_deploys.py  requirements.in  requirements.txt
projects/fsi-quant-assistant/adk-agent/tests/: conftest.py  test_agents.py
projects/manufacturing/ops-assistant/: .env.example  README.md  pyproject.toml
projects/manufacturing/ops-assistant/deployment/: Makefile  deploy.py  grant_permissions.sh  historical_failures.csv  prepare_dataset.py  vertex_high_pressure_coolant_pump.csv
projects/manufacturing/ops-assistant/ops_assistant_agent/: __init__.py  agent.py  bq_subagent.py  work-order-sop-template.md  workorder_subagent.py
projects/manufacturing/tech-assistant/: Dockerfile  README.md  deploy.sh  pyproject.toml
projects/manufacturing/tech-assistant/app/: .env.example  main.py
projects/manufacturing/tech-assistant/app/google_search_agent/: __init__.py  agent.py
projects/manufacturing/tech-assistant/app/static/: index.html
projects/manufacturing/tech-assistant/app/static/css/: style.css
projects/manufacturing/tech-assistant/app/static/js/: app.js  audio-player.js  audio-recorder.js  pcm-player-processor.js  pcm-recorder-processor.js
projects/manufacturing/tech-assistant/app/tech_assistant_agent/: tech_assistant_agent.py
projects/manufacturing/tech-assistant/assets/: prompt.txt  work-order.md
(+2982 files in other folders)
