[project]
name = "financial-analyst"
version = "0.0.1"
description = "AI-driven analyst"
authors = [
    { name = "Mark Servidio", email = "mservidio@google.com" }
]
license = "Apache License 2.0"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "google-adk==1.28.0",
    "google-cloud-logging>=3.14.0,<4.0.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.143.0,<2.0.0",
    "protobuf>=6.33.6,<7.0.0",
    "toolbox-core~=0.5.2",
    "finnhub-python~=2.4.25",
    "requests>=2.33.0,<3.0.0"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
