[project]
name = "ops-assistant"
version = "0.1.0"
description = "Operations Assistant in Manufacturing"
authors = [
    { name = "Google Developers" }
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "google-cloud-aiplatform[adk,agent_engine]>=1.93.0",
    "google-cloud-bigquery>=3.20.0",
    "pydantic>=2.7.0",
    "google-auth>=2.30.0",
    "python-dotenv>=1.0.0"
]

