[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "movieLenz"
version = "0.1.0"
description = "Video evaluation and prompt optimization tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "absl-py==2.3.1",
    "google-api-core==2.28.1",
    "google-genai==1.56.0",
    "imagehash==4.3.2",
    "matplotlib==3.10.8",
    "numpy==2.3.2",
    "opencv-python==4.10.0.84",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "torch==2.9.1",
    "torchvision==0.24.1",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "venv*"]
